Fixed minor bugs flagged by find bags